--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-  
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
@@ -86,3 +86,8 @@ flutter_launcher_icons:
   image_path: "assets/images/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/utils
+  file_name: app_images.dart
+  field_prefix:
