--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   dots_indicator: ^3.0.0
+  firebase_core: ^3.10.0
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -80,7 +81,6 @@ flutter:
           weight: 700
         - asset: assets/fonts/Cairo/Cairo-SemiBold.ttf
           weight: 600
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_launcher_icons:
