--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
   intl: ^0.19.0
+  modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.2.3
 
 dev_dependencies:
