--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  crypto: ^3.0.6
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dots_indicator: ^3.0.0
@@ -36,16 +37,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_facebook_auth: ^3.5.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
   google_sign_in: ^6.2.2
-  flutter_facebook_auth: '^3.5.0'
   intl: ^0.19.0
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.2.3
-  
+  sign_in_with_apple: ^6.1.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
