--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^6.2.2
   intl: ^0.19.0
   modal_progress_hud_nsn: ^0.5.1
+  provider: ^6.1.2
   shared_preferences: ^2.2.3
   sign_in_with_apple: ^6.1.4
   skeletonizer: ^1.4.3
